<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_layout_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/editTextTimeLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="61dp"
            tools:layout_editor_absoluteY="0dp">

            <EditText
                android:id="@+id/editTextTime"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:autofillHints=""
                android:duplicateParentState="false"
                android:ems="10"
                android:enabled="false"
                android:inputType="time"
                android:textAlignment="center"
                android:textSize="60sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/edit_text_time_button"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="LabelFor,SpeakableTextPresentCheck" />

            <Button
                android:id="@+id/edit_text_time_button"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:text="@string/edit_text_time_button"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/enable_notification"
            android:layout_width="match_parent"
            android:layout_height="70dp"

            android:checked="false"
            android:text="@string/enable_notifications"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@+id/editTextTimeLayout" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_layout_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.80">

        <Button
            android:id="@+id/return_button"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/return_str"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>